syntax = "proto3";

package ai.metathings.service.identityd2;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message GetActionRequest {
	OpAction action = 1 [(validator.field) = {msg_exists: true}];
}

message GetActionResponse {
	Action action = 1;
}
